applications/bitwarden/middleware.yaml

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: bitwarden-security
spec:
  headers:
    #Security Headers
    frameDeny: true
    browserXssFilter: true
    contentTypeNosniff: true
    #HTTPS Redirect Headers
    sslRedirect: true
    sslTemporaryRedirect: true
    #HSTS
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
