applications/bitwarden/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bitwarden
  namespace: bitwarden
  labels:
    traefik2: "true"
  annotations:
    kubernetes.io/ingress.class: cert
    #traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/acme-dns01-provider: route53
    cert-manager.io/acme-challenge-type: dns01
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: vault.decort.tech
    http:
      paths:
      - path: /cert-placeholder
        backend:
          serviceName: bitwarden
          servicePort: web
  tls:
  - hosts:
    - vault.decort.tech
    secretName: bitwarden-cert   
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: bitwarden
  namespace: bitwarden
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vault.decort.tech`)
      kind: Rule
      services:
        - name: bitwarden
          port: 80
      middlewares:
        - name: bitwarden-security
  tls:
    secretName: bitwarden-cert
